[workspace]
members = [
    "crates/core",
    "crates/gpui-tray",
    "crates/windows",
    "crates/macos",
    "crates/linux",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Yamrc <yamrci@outlook.com>"]
description = "Cross-platform tray lib for gpui"
license = "MPL-2.0"

[workspace.dependencies]
gpui = "0.2.2"
thiserror = "1.0"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "ico"]}
log = "0.4.29"

gpui-tray-core = { path = "crates/core" }

windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }
zbus = { version = "5.14.0" }
objc2 = { version = "0.6.3" }
