[workspace]
members = [
    "crates/core",
    "crates/gpui-tray",
    "crates/windows",
    "crates/macos",
    "crates/linux",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Yamrc <yamrci@outlook.com>"]
description = "Cross-platform tray lib for gpui"
license = "MPL-2.0"

[workspace.dependencies]
gpui = "0.2.2"
thiserror = "2.0"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "ico"]}
log = "0.4.29"
serde = "1.0.228"

gpui-tray-core = { path = "crates/core" }

windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }
zbus = "5.14.0"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"