[package]
name = "gpui-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
gpui.workspace = true
gpui-tray-core.workspace = true
log.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
gpui-tray-windows = { path = "../windows" }

[target.'cfg(target_os = "macos")'.dependencies]
gpui-tray-macos = { path = "../macos" }

[target.'cfg(target_os = "linux")'.dependencies]
gpui-tray-linux = { path = "../linux" }

[[example]]
name = "tray"
path = "examples/tray.rs"

# For example
[dev-dependencies]
env_logger = "0.11"
