[package]
name = "gpui-tray-linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gpui.workspace = true
gpui-tray-core.workspace = true
image.workspace = true
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true
