[package]
name = "gpui-tray-macos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
gpui.workspace = true
gpui-tray-core.workspace = true
image.workspace = true
log.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
