[package]
name = "nekowg-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
nekowg.workspace = true
tray-core.workspace = true
log.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
tray-windows = { path = "../windows" }

[target.'cfg(target_os = "macos")'.dependencies]
tray-macos = { path = "../macos" }

[target.'cfg(target_os = "linux")'.dependencies]
tray-linux = { path = "../linux" }

# For example
[dev-dependencies]
env_logger = "0.11"
nekowg_platform = { git = "https://github.com/NeoNekos/NekoWG.git", branch = "master", version = "0.2"}
