[package]
name = "tray-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]

[dev-dependencies]
serial_test = "3.3"
