[package]
name = "gpui-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
tray-windows = { path = "../tray-windows" }

[target.'cfg(target_os = "linux")'.dependencies]
tray-linux = { path = "../tray-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
tray-macos = { path = "../tray-macos" }
