[package]
name = "gpui-tray-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
gpui.workspace = true
gpui-tray-core.workspace = true
image.workspace = true
log.workspace = true
windows.workspace = true
